--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,3 +23,5 @@ jobs:
       run: npm install
     - name: Run The Unit Tests
       run: npm run test:unit
+    - name: Display username
+      run: echo 'rosty_d'
