--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build And Test
+name: Build, Test and Deploy
 
 on:
   push:
@@ -26,6 +26,7 @@ jobs:
       run: echo 'rosty_d'
 
   run-ui-tests:
+    needs: build-and-unit-tests
     runs-on: ubuntu-latest
     steps:
     - name: Checkout the code
@@ -43,3 +44,13 @@ jobs:
       run: npm run start &
     - name: Run The UI Tests
       run: npm run test:ui
+
+  deploy:
+    needs: run-ui-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
